# grapple

./: .gitignore  LICENSE  README.md  check  db.sh  pyproject.toml  requirements.txt  schema.sql  setup-env
grapple/: __init__.py  colors.py  document.py  embedding.py  main.py  metrics.py  openai.py  paragraph.py  tag.py  timer.py  triple.py  types.py  utils.py
grapple.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
