[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grapple"
version = "0.1.0"
description = "A tool to parse books and store subject-predicate-object triples in a graph database."
authors = [{ name = "Will Bradley" }]
dependencies = [
    "spacy >= 3.7.5",
    "neo4j >= 5.23.1",
]

[project.scripts]
grapple = "grapple.main:main"

[tool.autoimport.common_statements]
np = "import numpy as np"
tqdm = "from tqdm import tqdm"
UUID = "from uuid import UUID"
contextmanager = "from contextlib import contextmanager"
defaultdict = "from collections import defaultdict"
pprint = "from pprint import pprint"
dataclass = "from dataclasses import dataclass"
cosine = "from scipy.spatial.distance import cosine"
BaseModel = "from pydantic import BaseModel"
